--- a/.env
+++ b/.env
@@ -55,7 +55,7 @@ IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
 IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 
 # gtfs-importer variables
-IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:v5-2025-10-22T10.41.11-588c98b
+IPL_GTFS_IMPORTER_IMAGE=ghcr.io/mobidata-bw/postgis-gtfs-importer:v5-2025-11-04t11.28.22-494c209
 IPL_GTFS_IMPORTER_GTFS_DOWNLOAD_URL=https://www.nvbw.de/fileadmin/user_upload/service/open_data/fahrplandaten_mit_liniennetz/bwgesamt.zip
 # To make the GTFS import work within NVBW's IT infrastructure, we must manually resolve the GTFS server's domain.
 # Here however, in the default configuration, we set a harmless entry (an RFC 6761 special-use domain) that shouldn't interfere with the IPL operation.
