chore: Renovate Bot: switch atmoz/sftp to loose versioning

--- a/renovate.json5
+++ b/renovate.json5
@@ -33,6 +33,7 @@
 		{
 			"matchDatasources": ["docker"],
 			"matchPackageNames": [
+				"atmoz/sftp",
 				"entur/lamassu",
 				"ghcr.io/mobidata-bw/dagster-pipeline",
 				"ghcr.io/mobidata-bw/dagster-dagit",
