fix: gtfs-api: fix health check on linux/am64
In contrast to the differently-built [1] linux/arm64 image, the linux/amd64 only contains the binary and no shell. [2]

[1] https://github.com/PostgREST/postgrest/issues/2408
[2] https://github.com/PostgREST/postgrest/blob/531848366d1b513e107c3b0d67f489b3622e78f3/docker-hub-readme.md?plain=1#L65

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -625,6 +625,8 @@ services:
       PGRST_DB_ANON_ROLE: web_anon
       PGRST_DB_MAX_ROWS: ${IPL_GTFS_API_MAX_ROWS:?missing/empty}
       PGRST_ADMIN_SERVER_PORT: 3001 # exposes health check & metrics
+      # Note: This is necessary for the health check command to work!
+      PGRST_ADMIN_SERVER_HOST: localhost
 
       # > Also set db-channel-enabled to false since LISTEN is not compatible with transaction pooling. Although it should not give any errors if left enabled.
       # https://postgrest.org/en/stable/references/connection_pool.html#external-connection-poolers
@@ -637,7 +639,8 @@ services:
       - "traefik.http.services.gtfs-api.loadbalancer.server.port=3000"
     restart: unless-stopped
     healthcheck:
-      test: 'env PGRST_ADMIN_SERVER_HOST=localhost postgrest --ready'
+      # Note: The linux/amd64 image does not have a shell, so we have to use the CMD notation here and set $PGRST_ADMIN_SERVER_HOST above.
+      test: ['CMD', '/bin/postgrest', '--ready']
       interval: 0m5s
       timeout: 3s
 
