--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ TZ=Europe/Berlin
 TRANSFORMER_PROXY_IMAGE=ghcr.io/mobidata-bw/ipl-proxy:2025-08-21T05-12
 TRANSFORMER_PROXY_PORT=8400
 
-LAMASSU_IMAGE=entur/lamassu:2025-10-06T15-58
+LAMASSU_IMAGE=entur/lamassu:2025-12-08T06-47
 LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_BASE_URL=http://localhost:8080/sharing
@@ -31,7 +31,7 @@ IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
 
 # x2gbfs variables (Note: when changing the providers, be sure to check if the image version supports them)
-X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2025-11-17T08-03
+X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2025-12-12t07-52
 X2GBFS_PROVIDERS=deer,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,naturenergie_sharing,stadtwerk_tauberfranken,teilauto_neckar-alb,teilauto_biberach,teilauto_schwaebisch_hall,oekostadt_renningen,gruene-flotte_freiburg,flinkster_carsharing,oberschwabenmobil,free2move_stuttgart,herrenberg_alf,herrenberg_fare,herrenberg_guelf,herrenberg_stadtrad,lara_to_go,swu2go,mikar,ford_carsharing_autohausbaur,einfach_unterwegs,seefahrer_ecarsharing,stadtwerke_wertheim,conficars_ulm
 X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
