--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -193,12 +193,12 @@ lamassu:
       codespace: STL
       url: "https://stella.backend.fleetbird.eu/rest/gbfs/v2.2/1/gbfs.json"
       language: en
-    - systemId: freibe
-      operatorId: FRE:Operator:freibe
-      operatorName: Süwag2GO
-      codespace: FRE
-      url: "https://franke.backend.fleetbird.eu/rest/gbfs/v2.2/7/gbfs.json"
-      language: en
+#    - systemId: freibe
+#      operatorId: FRE:Operator:freibe
+#      operatorName: Süwag2GO
+#      codespace: FRE
+#      url: "https://franke.backend.fleetbird.eu/rest/gbfs/v2.2/7/gbfs.json"
+#      language: en
     - systemId: regiorad_stuttgart
       operatorId: CAB:Operator:callabike
       operatorName: Call-A-Bike
@@ -527,9 +527,10 @@ lamassu:
       operatorName: Yoio
       codespace: YOO
       # Note: yoio feed is accessed via proxy, using http instead of https
-      url: "http://yoio.rideatom.com/gbfs/71/v3.0/gbfs"
+      url: "http://yoio.rideatom.com/gbfs/v2_2/en/gbfs?id=71"
+#      url: "http://yoio.rideatom.com/gbfs/71/v3.0/gbfs"
       language: en
-      version: 3.0
+#      version: 3.0
     - systemId: zeo_bruchsal
       operatorId: ZEO:Operator:zeo
       operatorName: Zeo
