--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -763,13 +763,13 @@ lamassu:
       # Note: doot feeds are accessed via proxy, using http instead of https
       url: "http://gbfs.api.ridedott.com/public/v2/st.-gallen/gbfs.json"
       language: en
-    - systemId: dott_winterthur
-      operatorId: DOT:Operator:dott
-      operatorName: Dott
-      codespace: DOS
-      # Note: doot feeds are accessed via proxy, using http instead of https
-      url: "http://gbfs.api.ridedott.com/public/v2/winterthur/gbfs.json"
-      language: en
+#    - systemId: dott_winterthur
+#      operatorId: DOT:Operator:dott
+#      operatorName: Dott
+#      codespace: DOS
+#      # Note: doot feeds are accessed via proxy, using http instead of https
+#      url: "http://gbfs.api.ridedott.com/public/v2/winterthur/gbfs.json"
+#      language: en
     - systemId: dott_zurich
       operatorId: DOT:Operator:dott
       operatorName: Dott
