reactivate donkey_le_locle

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -708,12 +708,12 @@ lamassu:
       # Note: donkey feeds are accessed via proxy, using http instead of https
       url: "http://stables.donkey.bike/api/public/gbfs/2/donkey_kreuzlingen/gbfs.json"
       language: en
-#    - systemId: donkey_le_locle
-#      operatorId: DKY:Operator:donkey
-#      operatorName: Donkey Republic
-#      codespace: DKP
-#      url: "http://stables.donkey.bike/api/public/gbfs/2/donkey_le_locle/gbfs.json"
-#      language: en
+    - systemId: donkey_le_locle
+      operatorId: DKY:Operator:donkey
+      operatorName: Donkey Republic
+      codespace: DKP
+      url: "http://stables.donkey.bike/api/public/gbfs/2/donkey_le_locle/gbfs.json"
+      language: en
     - systemId: donkey_neuchatel
       operatorId: DKY:Operator:donkey
       operatorName: Donkey Republic
