rename lime_stuttgart -> lime_bw, including stuttgart and konstanz

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -401,7 +401,7 @@ lamassu:
 #      # Note: lime feeds are accessed via proxy, using http instead of https
 #      url: "http://data.lime.bike/api/partners/v2/gbfs/frankfurt/gbfs.json"
 #      language: en
-    - systemId: lime_stuttgart
+    - systemId: lime_bw
       operatorId: LME:Operator:lime
       operatorName: Lime
       codespace: LMG
