--- a/etc/ocpdb/config.yaml
+++ b/etc/ocpdb/config.yaml
@@ -21,7 +21,9 @@ LOGGING:
   version: 1
   formatters:
     human_readable:
-      format: '%(asctime)s %(levelname)s: %(message)s'
+      (): webapp.common.logging.formatter.flask_attributes_formatter.FlaskAttributesFormatter
+      format: '%(asctime)s %(levelname)s %(source)s: %(message)s'
+      defaults: { 'source': '-' }
   handlers:
     console_stdout:
       class: logging.StreamHandler
