--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -295,7 +295,8 @@ services:
     volumes:
       # var/geoserver defaults to geoserver/data_dir, custom config shall explicitly be defined in etc/geoserver
       - ./var/geoserver/datadir/:/var/geoserver/datadir/
-      - ./var/geoserver/logs/:/var/geoserver/logs/
+      - ./var/log/geoserver/tomcat/:/usr/local/tomcat/logs/
+      - ./var/log/geoserver/geoserver/:/var/geoserver/logs/
       - ./var/geoserver/gwc_cache_dir/:/var/geoserver/gwc_cache_dir/
       - ./etc/geoserver/:/var/geoserver/datadir_template/
       # global.xml is written by geoserver before config reload, so we need to have it mounted already at start
@@ -315,7 +316,6 @@ services:
       - INITIAL_MEMORY=${GEOSERVER_INITIAL_MEMORY}
       - MAXIMUM_MEMORY=${GEOSERVER_MAXIMUM_MEMORY}
       - GEOSERVER_DATA_DIR_CUSTOM=/var/geoserver/datadir_template/
-      - GEOSERVER_LOGGING_PROFILE=${GEOSERVER_LOGGING_PROFILE}
       - GEOSERVER_CSRF_WHITELIST=${GEOSERVER_CSRF_WHITELIST:?missing/empty}
       - PROXY_BASE_URL=${GEOSERVER_PROXY_BASE_URL:?missing/empty}
       # All we want to do is set user.timezone and DALLOW_ENV_PARAMETRIZATION. Due to https://github.com/geosolutions-it/docker-geoserver/issues/133
@@ -337,7 +337,6 @@ services:
           -XX:ConcGCThreads=5
           -Dorg.geotools.coverage.jaiext.enabled=$${JAIEXT_ENABLED}
           -Dorg.geotools.shapefile.datetime=true
-          -DGEOSERVER_LOG_LOCATION=$${GEOSERVER_LOG_LOCATION}
           -DGEOWEBCACHE_CONFIG_DIR=$${GEOWEBCACHE_CONFIG_DIR}
           -DGEOWEBCACHE_CACHE_DIR=$${GEOWEBCACHE_CACHE_DIR}
           -DNETCDF_DATA_DIR=$${NETCDF_DATA_DIR}
